added fast deployment and icon